--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Transportes</title>
+  <title>Requisição de transporte | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %>
 </head>
 <body>
+	<%= render 'layouts/header' %>
+	<div class="row-fluid">
+		<div class="span10 offset1">
+			<%= render 'layouts/flash' %>
+		</div>
+	</div>
 
-<%= yield %>
-
+	<div class="row-fluid">
+		<%= yield %>
+	</div>
+	
+	<div class="row-fluid">
+		<%= render 'layouts/footer' %>
+	</div>
+	<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
