Added services and unit to users

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,8 @@
 						Definições<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
+							<li><%= link_to "Serviços", services_path %></li>
+							<li><%= link_to "Unidades", ulsneunits_path %></li>
 							<li><%= link_to "Utilizadores", users_path %></li>
 						</ul>
 					</li>
