--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,16 @@
 
 <h1>Utilizadores</h1>
 <div class="span8 offset2">
+	<%= link_to "Novo utilizador", new_user_path, class: 'btn btn-primary' %>
+	<%= will_paginate %>
 	<table class="table">
 		<thead>
 			<tr>
 				<th>Nome</th>
 				<th>N. mecanográfico</th>
 				<th>E-mail</th>
-				<th>Autorizado</th>
+				<th>Autorizado?</th>
+				<th>Validado?</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -17,9 +20,11 @@
 					<td><%= link_to user.nome, user_path(user), class: 'btn btn-link' %></td>
 					<td><%= user.numero_mecanografico %></td>
 					<td><%= user.email %></td>
+					<td></td>
 					<td><%= user.admin %></td>
 				</tr>
 			<% end %>
 		</tbody>
 	</table>
+	<%= will_paginate %>
 </div>
