Added req material

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
 	<div class="span10 offset1">
-		<small>SIC @ ULS Nordeste E.P.E.</small>
-		<small class="pull-right">Sampaio da Veiga &copy; 2013</small>
+		<small>Sampaio da Veiga @ SIC</small>
+		<small class="pull-right">ULS Nordeste E.P.E. &copy; 2013</small>
 	</div>
 </footer>
