--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @user do |f| %>
 	<% if @user.errors.any? %>
 		<div class="error_explanation">
-			<h2><%= pluralize(@user.errors.count, "erro") %> impediram este utilizador de ser guardado</h2>
+			<h2>O formulário contém <%= pluralize(@user.errors.count, "erro") %></h2>
 			<ul>
 				<% for message in @user.errors.full_messages %>
 					<li><%= message %></li>
