--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @service do |f| %>
 	<% if @service.errors.any? %>
 		<div class="error_explanation">
-			<h2><%= pluralize(@service.errors.count, "erro") %> impediu este serviço de ser guardado</h2>
+			<h2>O formulário contém <%= pluralize(@service.errors.count, "erro") %></h2>
 			<ul>
 				<% for message in @service.errors.full_messages %>
 					<li><%= message %></li>
