--- a/app/views/ulsneunits/_form.html.erb
+++ b/app/views/ulsneunits/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @ulsneunit do |f| %>
 	<% if @ulsneunit.errors.any? %>
 		<div class="error_explanation">
-			<h2><%= pluralize(@ulsneunit.errors.count, "erro") %> impediram esta unidade de ser guardada</h2>
+			<h2>O formulário contém <%= pluralize(@ulsneunit.errors.count, "erro") %></h2>
 			<ul>
 				<% for message in @ulsneunit.errors.full_messages %>
 					<li><%= message %></li>
