Finished reqmaterials approvall

--- a/app/views/reqmaterials/_form.html.erb
+++ b/app/views/reqmaterials/_form.html.erb
@@ -10,20 +10,18 @@
 		</div>
 	<% end %>
 	<div class="row-fluid">
-		<div class="span3">
+		<div class="span4">
 			<fieldset>
-				<%= f.label :user_id, "Requisitante" %>
-				<%= text_field_tag current_user, current_user.nome, readonly: true %>
-				<%= f.text_field :user_id, style: 'display: none' %>
-				<%= f.label :servico %>
-				<%= text_field_tag current_user, current_user.service.nome, readonly: true %>
-				<%= f.label :ulsneunit, "Unidade" %>
-				<%= text_field_tag current_user, current_user.ulsneunit.nome, readonly: true %>
+				<%= text_field_tag current_user, current_user.nome, readonly: true, class: 'span11' %>
+				<%= f.text_field :user_id, style: 'display: none', readonly: true, class: 'span11' %>
+				<%= text_field_tag current_user, current_user.service.nome, readonly: true, class: 'span11' %>
+				<%= text_field_tag current_user, current_user.ulsneunit.nome, readonly: true, class: 'span11' %>
 				<%= f.label :boss_id, "Chefia" %>
 				<%= f.select :boss_id, current_user.service.bosses.collect { |b| [b.user.nome, b.user.id] }, { prompt: "Seleccione:"}, { class: 'input-medium' } %>
+				<%= f.text_field :estado, style: 'display: none', readonly: true, class: 'span11' %>
 			</fieldset>
 		</div>
-		<div class="span9">
+		<div class="span8">
 			<fieldset>
 				<%= f.label :assunto %>
 				<%= f.text_field :assunto %>
@@ -45,7 +43,7 @@
 			</fieldset>
 			<div class="actions">
 				<%= f.submit "Submeter", class: 'btn btn-success' %>
-				<%= link_to "Cancelar", user_path(current_user), class: 'btn' %>
+				<%= link_to "Cancelar", user_reqmaterial_path(@user, @reqmaterial), class: 'btn' %>
 			</div>
 		</div>
 	</div>
