--- a/app/views/reqmaterials/_adminform.html.erb
+++ b/app/views/reqmaterials/_adminform.html.erb
@@ -1,8 +1,8 @@
 <% if current_user.admin? %>
 	<div class="well well-small">
 		<legend>Validação</legend>
-		<%= form_tag user_validate_path do %>
-			<%= select_tag :estado, options_for_select([["Pendente", "Pendente"], ["Aprovado", "Aprovado"], ["Recusado","Recusado"]], @reqmaterial.estado) %>
+		<%= form_tag user_validate_reqmaterial_path do %>
+			<%= select_tag :estado, options_for_select([["Pendente", 0], ["Aprovado", 1], ["Recusado", 2]], @reqmaterial.estado) %>
 			<%= text_area_tag :comentario, @reqmaterial.comentario, class: 'span11' %>
 			<div class="actions">
 				<%= submit_tag "Validar", class: 'btn btn-info' %>
