--- a/app/views/reqpeople/_form.html.erb
+++ b/app/views/reqpeople/_form.html.erb
@@ -49,6 +49,7 @@
       					<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
     				</span>
 				</div>
+				<span class="help-block">Data e hora de inicio da viagem de retorno</span>
 				<%= f.label :observacoes %>
 				<%= f.text_area :observacoes %>
 			</fieldset>
