--- a/app/views/reqmaterials/index.html.erb
+++ b/app/views/reqmaterials/index.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, "Requisições #{@user.nome}") %>
+<% provide(:title, "Transporte material: #{@user.nome}") %>
 
-<h1> <%= link_to "Requisições #{@user.nome}", user_path(@user) %></h1>
+<h1> <%= link_to "Transporte material: #{@user.nome}", user_path(@user) %></h1>
 <div class="span8 offset2">
 	<%= will_paginate %>
 	<table class="table">
