Refactored reqs with select

--- a/app/views/reqpeople/_form.html.erb
+++ b/app/views/reqpeople/_form.html.erb
@@ -17,7 +17,7 @@
 				<%= text_field_tag current_user, current_user.service.nome, readonly: true, class: 'span11' %>
 				<%= text_field_tag current_user, current_user.ulsneunit.nome, readonly: true, class: 'span11' %>
 				<%= f.label :boss_id, "Chefia" %>
-				<%= f.select :boss_id, current_user.service.bosses.collect { |b| [b.user.nome, b.user.id] }, { prompt: "Seleccione:"}, { class: 'input-medium' } %>
+				<%= f.select :boss_id, current_user.service.bosses.collect { |b| [b.user.nome, b.user.id] }, { class: 'input-medium' } %>
 				<%= f.text_field :estado, style: 'display: none', readonly: true, class: 'span11' %>
 			</fieldset>
 		</div>
@@ -32,7 +32,7 @@
 				<%= f.label :numero_passageiros %>
 				<%= f.text_field :numero_passageiros, class: 'span2' %>
 				<%= f.label :local_partida %>
-				<%= f.text_field :local_partida %>
+				<%= f.select :local_partida, Ulsneunit.order('Nome').collect { |u| [ u.nome, u.id ] } %><br />
 				<div class="input-append date datetimepicker">
 					<%= f.label :data_partida %>
 					<%= f.text_field :data_partida %>
@@ -41,7 +41,7 @@
     				</span>
 				</div>
 				<%= f.label :local_retorno %>
-				<%= f.text_field :local_retorno %>
+				<%= f.select :local_retorno, Ulsneunit.order('Nome').collect { |u| [ u.nome, u.id ] } %><br />
 				<div class="input-append date datetimepicker">
 					<%= f.label :data_retorno %>
 					<%= f.text_field :data_retorno %>
