--- a/app/views/reqmaterials/_form.html.erb
+++ b/app/views/reqmaterials/_form.html.erb
@@ -17,7 +17,7 @@
 				<%= text_field_tag current_user, current_user.service.nome, readonly: true, class: 'span11' %>
 				<%= text_field_tag current_user, current_user.ulsneunit.nome, readonly: true, class: 'span11' %>
 				<%= f.label :boss_id, "Chefia" %>
-				<%= f.select :boss_id, current_user.service.bosses.collect { |b| [b.user.nome, b.user.id] }, { prompt: "Seleccione:"}, { class: 'input-medium' } %>
+				<%= f.select :boss_id, current_user.service.bosses.collect { |b| [b.user.nome, b.user.id] }, { class: 'input-medium' } %>
 				<%= f.text_field :estado, style: 'display: none', readonly: true, class: 'span11' %>
 			</fieldset>
 		</div>
@@ -26,7 +26,7 @@
 				<%= f.label :assunto %>
 				<%= f.text_field :assunto %>
 				<%= f.label :local_partida %>
-				<%= f.text_field :local_partida %>
+				<%= f.select :local_partida, Ulsneunit.order('Nome').collect { |u| [ u.nome, u.id ] } %>
 				<%= f.label :local_entrega %>
 				<%= f.text_field :local_entrega %>
 				<div id="datetimepicker" class="input-append date">
