Added destination list and other input

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
 						Definições<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
+							<li><%= link_to "Destinos", destinations_path %></li>
 							<li><%= link_to "Serviços", services_path %></li>
 							<li><%= link_to "Unidades", ulsneunits_path %></li>
 							<li><%= link_to "Utilizadores", users_path %></li>
