--- a/app/views/reqpeople/index.html.erb
+++ b/app/views/reqpeople/index.html.erb
@@ -21,9 +21,9 @@
 					<% when 1 %>
 						<% estado = "success" %>
 					<% when 2 %>
-						<% estado = "danger" %>
+						<% estado = "error" %>
 					<% else %>
-						<% estado = "warning" %>
+						<% estado = "" %>
 				<% end %>
 				<tr class=<%= estado %>>
 					<td><%= link_to reqperson.assunto, user_reqperson_path(@user, reqperson) %></td>
