--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Requisições para <%= Date.today %></h1>
 <div class="span10 offset1">
 	<div class="well">
-		<h2>Transporte de material <small><%= link_to "Gerir requisições", '#' %></small></h2>
+		<h2>Transporte de material <small><%= link_to "Gerir", static_pages_reqmaterials_path %></small></h2>
 		<table class="table">
 			<thead>
 				<tr>
@@ -32,7 +32,7 @@
 		</table>
 	</div>
 	<div class="well">
-		<h2>Transporte de pessoal <small><%= link_to "Gerir requisições", '#' %></small></h2>
+		<h2>Transporte de pessoal <small><%= link_to "Gerir", static_pages_reqpeople_path %></small></h2>
 		<table class="table">
 			<thead>
 				<tr>
