--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,7 @@
 <header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="brand">
-			Requisição de transporte
-			<% if current_user %>
-				&nbsp;|&nbsp;<%= current_user.nome %>
-			<% end %>
+			Requisição de transporte<% if current_user %>&nbsp;|&nbsp;<%= current_user.nome %><% end %>
 		</div>
 		<ul class="nav pull-right">
 			<% if current_user %>
