Calendar working, in need of refactoring

--- a/app/views/reqpeople/show.html.erb
+++ b/app/views/reqpeople/show.html.erb
@@ -8,7 +8,7 @@
 		<% estado = "Pendente" %>
 <% end %>
 
-<h1><%= @reqperson.assunto %></h1>
+<h1>Transporte de pessoas: <%= @reqperson.assunto %></h1>
 <div class="span6 offset3">
 	<dl class="dl-horizontal">
 		<dt>Requisitante</dt>
