--- a/app/views/reqmaterials/show.html.erb
+++ b/app/views/reqmaterials/show.html.erb
@@ -8,7 +8,7 @@
 		<% estado = "Pendente" %>
 <% end %>
 
-<h1><%= @reqmaterial.assunto %></h1>
+<h1>Transporte de material: <%= @reqmaterial.assunto %></h1>
 <div class="span6 offset3">
 	<dl class="dl-horizontal">
 		<dt>Requisitante</dt>
