--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,16 @@
 <% provide(:title, "Index") %>
 
-<h1>Requisições para <%= Date.today %> <small><%= link_to "Calendário", static_pages_calendar_path %></small></h1>
+<h1>Requisições para <%= Date.today %></h1>
 <div class="span10 offset1">
 	<div class="well">
-		<h2>Transporte de material <small><%= link_to "Gerir", static_pages_reqmaterials_path %></small></h2>
+		<h2>
+			Transporte de material
+			<small>
+				<%= link_to "Gerir", static_pages_reqmaterials_path %>
+				|
+				<%= link_to "Calendário", static_pages_all_reqmaterials_path %>
+			</small>
+		</h2>
 		<table class="table">
 			<thead>
 				<tr>
@@ -32,7 +39,14 @@
 		</table>
 	</div>
 	<div class="well">
-		<h2>Transporte de pessoal <small><%= link_to "Gerir", static_pages_reqpeople_path %></small></h2>
+		<h2>
+			Transporte de pessoal
+			<small>
+				<%= link_to "Gerir", static_pages_reqpeople_path %>
+				|
+				<%= link_to "Calendário", static_pages_all_reqpeople_path %>
+			</small>
+		</h2>
 		<table class="table">
 			<thead>
 				<tr>
