--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,16 @@
 		<div class="brand">
 			Requisição de transporte<% if current_user %>&nbsp;|&nbsp;<%= current_user.nome %><% end %>
 		</div>
+		<div class="dropdown">
+  <!-- Link or button to toggle dropdown -->
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    <li><a tabindex="-1" href="#">Action</a></li>
+    <li><a tabindex="-1" href="#">Another action</a></li>
+    <li><a tabindex="-1" href="#">Something else here</a></li>
+    <li class="divider"></li>
+    <li><a tabindex="-1" href="#">Separated link</a></li>
+  </ul>
+</div>
 		<ul class="nav pull-right">
 			<% if current_user %>
 				<li><%= link_to "Início", root_path %></li>
@@ -24,6 +34,5 @@
 				<li><%= link_to "Sair", logout_path %></li>
 			<% end %>
 		</ul>
-
 	</div>
 </header>
