added search users, corrected titles

--- a/app/views/reqmaterials/edit.html.erb
+++ b/app/views/reqmaterials/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @reqmaterial.assunto) %>
 
-<h1><%= @reqmaterial.assunto %></h1>
+<h1>Requisição: <%= @reqmaterial.assunto %></h1>
 <div class="span8 offset2">
 	<%= render 'form' %>
 	<%= render 'adminform' %>
