--- a/app/views/reqmaterials/new.html.erb
+++ b/app/views/reqmaterials/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Novo transporte de material") %>
 
-<h1>Novo transporte de material</h1>
+<h1>Transporte de material: nova requisição</h1>
 <div class="span8 offset2">
 	<%= render 'form' %>
 </div>
