--- a/app/views/reqpeople/edit.html.erb
+++ b/app/views/reqpeople/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @reqperson.assunto) %>
 
-<h1><%= @reqperson.assunto %></h1>
+<h1>Requisição: <%= @reqperson.assunto %></h1>
 <div class="span8 offset2">
 	<%= render 'form' %>
 	<%= render 'adminform' %>
