--- a/app/views/bosses/view.html.erb
+++ b/app/views/bosses/view.html.erb
@@ -1,13 +1,13 @@
 <% provide(:title, "Requisições do Serviço") %>
 
 <h1>Requisições de <%= @service.nome %></h1>
-<div class="span12">
+<div class="span10 offset1">
 	<table class="table table-condensed">
 		<thead>
 			<tr>
-				<th>Funcionário</th>
-				<th>Material</th>
-				<th>Pessoal</th>
+				<th></th>
+				<th>Transporte de material</th>
+				<th>Transporte de pessoal</th>
 			</tr>
 		</thead>
 		<tbody>
