--- a/app/views/reqpeople/new.html.erb
+++ b/app/views/reqpeople/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Nova deslocação de pessoal") %>
 
-<h1>Nova deslocação de pessoal </h1>
+<h1>Deslocação pessoal: nova requisição</h1>
 <div class="span8 offset2">
 	<%= render 'form' %>
 </div>
