--- a/app/views/reqpeople/show.html.erb
+++ b/app/views/reqpeople/show.html.erb
@@ -40,4 +40,5 @@
 	</dl>
 	<%= link_to "Editar", edit_user_reqperson_path(@user, @reqperson), class: 'btn btn-primary' %>
 	<%= link_to "Cancelar", @user, class: 'btn' %>
+	<%= link_to "Eliminar", user_reqperson_path(@user, @reqperson), method: :delete, data: { confirm: "Tem a certeza?"}, class: 'btn btn-danger'  %>
 </div>
